# bgfx_ros

./: CMakeLists.txt  README.md  package.xml
cfg/: Shadow.cfg
config/: bgfx.rviz
launch/: bgfx.launch
scripts/: make_marker.py
src/: bgfx.cpp  bgfx_ros.cpp  fs_cubes.sc  fs_sms_mesh.sc  fs_sms_mesh_pd.sc  fs_sms_shadow.sc  fs_sms_shadow.sh  fs_sms_shadow_pd.sc  standalone_bgfx.cpp  varying.def.sc  vs_cubes.sc  vs_sms_mesh.sc
src/shadowmaps/: fs_shadowmaps_color_black.sc  fs_shadowmaps_color_lighting.sh  fs_shadowmaps_color_texture.sc  fs_shadowmaps_hblur_vsm.sc  fs_shadowmaps_packdepth.sc  fs_shadowmaps_packdepth_linear.sc  fs_shadowmaps_packdepth_vsm.sc  fs_shadowmaps_packdepth_vsm_linear.sc  fs_shadowmaps_texture.sc  fs_shadowmaps_unpackdepth.sc  fs_shadowmaps_unpackdepth_vsm.sc  fs_shadowmaps_vblur.sc  fs_shadowmaps_vblur_vsm.sc  shadowmaps.cpp  vs_shadowmaps_color_lighting.sc  vs_shadowmaps_color_lighting_csm.sc  vs_shadowmaps_color_lighting_linear.sc  vs_shadowmaps_color_lighting_linear_csm.sc  vs_shadowmaps_color_lighting_linear_omni.sc  vs_shadowmaps_color_lighting_omni.sc  vs_shadowmaps_color_texture.sc  vs_shadowmaps_depth.sc  vs_shadowmaps_hblur.sc  vs_shadowmaps_packdepth.sc  vs_shadowmaps_packdepth_linear.sc  vs_shadowmaps_texture_lighting.sc  vs_shadowmaps_vblur.sc
